# k8s-data-platform-orchestrator

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci-backend.yml  ci-e2e.yml  ci-frontend.yml  ci-worker.yml  release.yml  security.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: __init__.py  admin.py  ai.py  alerts.py  audit.py  auth.py  clusters.py  k8s.py  kafka.py  metrics.py  orchestration.py  platform.py  rbac.py  spark.py
backend/app/core/: audit.py  celery_client.py  config.py  crypto.py  deps.py  rbac.py  security.py
backend/app/db/: models.py  schemas.py  seed.py  session.py
backend/app/k8s/: client.py  utils.py  watch.py
backend/app/services/: ai.py  alerts.py  kafka.py  metrics.py  orchestration.py  platform_catalog.py  spark.py
backend/tests/: test_kafka_validation.py  test_orchestration_contract.py  test_platform_catalog.py  test_security.py
deploy/ansible/: README.md  ansible.cfg
deploy/docker/: backend.Dockerfile  docker-compose.dev.yml  frontend.Dockerfile  worker.Dockerfile
deploy/helm/: README.md
deploy/manifests/: backend-deployment.yaml  namespace.yaml
docs/: api-spec.md  architecture.md  codex-prompt-pack.md  github-project.md  implementation-status.md  learning-development-track.md  oss-repositories.md  threat-model.md
docs/ADR/: 0001-kafka-compatibility.md
frontend/: index.html  package.json
scripts/: bootstrap-dev.sh  seed-backend.sh
worker/: .env.example  README.md  pyproject.toml
worker/app/: celery_app.py  config.py  db.py
worker/app/executors/: k8s_executor.py
worker/app/jobs/: ai.py  alerts.py  notifications.py  orchestration.py
worker/app/watchers/: cluster_watcher.py
worker/tests/: test_worker_sanity.py
(+29 files in other folders)
