[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-data-platform-orchestrator-backend"
version = "0.1.0"
description = "FastAPI control plane for K8s data platform orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.31",
  "alembic>=1.13.2",
  "pymysql>=1.1.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "python-jose[cryptography]>=3.3.0",
  "passlib[argon2]>=1.7.4",
  "python-multipart>=0.0.9",
  "kubernetes>=30.1.0",
  "httpx>=0.27.0",
  "cryptography>=43.0.0",
  "celery>=5.4.0",
  "redis>=5.0.7",
  "openai>=1.40.0",
  "packaging>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.6",
  "mypy>=1.11.1",
  "types-passlib",
  "types-redis",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
