[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-data-platform-orchestrator-worker"
version = "0.1.0"
description = "Worker and schedulers for K8s data platform orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4.0",
  "redis>=5.0.7",
  "sqlalchemy>=2.0.31",
  "pymysql>=1.1.1",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.5.6",
  "mypy>=1.11.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
